# rust-linkml-core

./: .gitignore  AGENTS.md  README.md  pyproject.toml  regen.sh
notebooks/: showcase.ipynb  test_notebook.sh
scripts/: measure_rinf_de.sh
src/python/: Cargo.toml  pyproject.toml
src/python/python/linkml_runtime_rust/: __init__.py  _native.pyi  _rdf_convenience.py  debug_utils.py
src/python/src/: io_bridge.rs  lib.rs
src/python/tests/: python_api.rs  python_diff_patch.rs  python_equals.rs  python_navigate.rs  python_value.rs
src/runtime/: Cargo.toml
src/runtime/src/: diff.rs  lib.rs  rdf_export.rs  rdf_import.rs  rdf_import_store.rs  rdf_import_store_disk.rs  rdf_streaming.rs  regex_support.rs  triple_source.rs  turtle.rs  turtle_import.rs
src/runtime/src/blame/: mod.rs
src/runtime/src/constraints/: mod.rs  object.rs  slot.rs
src/runtime/tests/: alias.rs  basic.rs  clone_fresh_node_ids.rs  convert.rs  diff.rs  diff_identifier.rs  disk_graph_basic.rs  disk_graph_parity.rs  enum.rs  equality.rs  inline_structure.rs  inlined_mapping_subclass.rs  navigate.rs  non_inlined_list.rs  polymorphic.rs  rdf_stream_basic.rs  rinf_herefoss.rs  rinf_import_test.rs  streaming_import.rs  trace.rs  turtle_custom_types.rs  turtle_enum_meaning.rs  turtle_import_roundtrip.rs  turtle_lang_tags.rs  turtle_prefix_conflict.rs  turtle_typed_literals.rs  validation.rs  warning_emission.rs
src/runtime/tests/data/: builtin_prefix_data.yaml  builtin_prefix_schema.yaml  cardinality_exact_missing.yaml  cardinality_exact_too_many.yaml  cardinality_schema.yaml  cardinality_too_few.yaml  cardinality_too_many.yaml  cardinality_valid.yaml  container_person_bad_email.yaml  cross_schema_prefix_base.yaml  cross_schema_prefix_data.yaml  cross_schema_prefix_derived.yaml  custom_type_data.yaml  custom_type_schema.yaml  enum_meaning_data.yaml  enum_meaning_no_meaning_data.yaml  enum_meaning_schema.yaml  example_personinfo_data_2.yaml  lang_tag_data.yaml  lang_tag_schema.yaml  non_inlined_list_schema.yaml  person_age_negative.yaml  person_age_too_big.yaml  person_bad_email.yaml  person_missing_familial_type.yaml  person_unknown_attr.yaml  prefix_conflict_base.yaml  prefix_conflict_data.yaml  prefix_conflict_derived.yaml  slot_uri_data.yaml  slot_uri_schema.yaml  typed_literals_data.yaml  typed_literals_schema.yaml
(+45 files in other folders)
