[package]
name = "linkml_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "linkml_runtime"
crate-type = ["rlib"]


[dependencies]
linkml_schemaview = { package = "schemaview", path = "../schemaview", default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
linkml_meta = { path = "../metamodel" }
oxrdf = { version = "0.2", optional = true }
oxttl = { version = "0.1", optional = true }

serde_yml = "0.0.12"
serde_path_to_error = "0.1.17"
regex = { version = "1", optional = true }
regex-lite = { version = "0.1", optional = true }
once_cell = "1"
percent-encoding = { version = "2.3", optional = true }
pyo3 = { version = "0.25.0", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[features]
default = ["ttl", "curies", "full_regex"]
resolve = ["linkml_schemaview/resolve"]
ttl = ["oxrdf", "oxttl", "percent-encoding"]
curies = ["linkml_schemaview/curies"]
full_regex = ["dep:regex"]
slim = ["dep:regex-lite"]
python = ["dep:pyo3"]
